Tue May 12 07:55:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,flax/searchserver/queries.py:
	  Add a set of classes to define Queries and Searches; the idea is
	  that application.py will parse the search parameters into these
	  classes, such that the backends simply have to take a Search
	  object and convert it into the appropriate search (or raise an
	  exception if that's not possible).  All the validation will live
	  in application.py (or, at least, not in backends).  Also, some
	  tidyups to validation and to documentation comments.

Mon May 11 14:23:49 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/base_backend.py: Fix parameter name,
	  and add base class for similarity searches.

Mon May 11 14:10:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/__init__.py: Remove some debugging
	  prints, and fix some indentations problems.

Sun May 10 21:14:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Fix missing wsgiwapi before
	  ValidationError. Flush immediately after schema changes - this
	  avoids race conditions to some extent (where one process reads
	  the schema before another one overwrites it, and then overwrites
	  changes between that tims and the time that it commits).  Add
	  methods to get and set the template.  Add method for performing a
	  search with a particular template.  Add method for performing a
	  similarity search.

Sun May 10 20:53:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/schema.py: Add templates to schema.

Sat May 09 16:36:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/controller.py: ( not [

Sat May 09 11:42:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst,flax/searchserver/application.py: Add version prefix.
